fix: mudar no css os wrap
Foi alterado o wrap da tela aramazem.html e reabastecimento.html para para os dados serem visualizados de forma integra

--- a/src/novo_backend/static/css/kit.css
+++ b/src/novo_backend/static/css/kit.css
@@ -70,10 +70,7 @@ body {
     display: flex;
     gap: 10px;
     flex-wrap: wrap;
-    /* flex-direction: column; */
-    /* text-align: center; */
-    /* align-items: center;
-    justify-content: center; */
+  
 
 }
 
